--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					<p class="t b" style="padding-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #C8C8C8"><img class="icon" height="15" src="img/bullet.png"><b>Education</b></p>
 					<div class="row">
 						<div class="col-sm-3 text-right">
-							<p style="padding-top:5px"><b>2011/01 - Present</b></p>
+							<p style="padding-top:5px"><b>2011/06 - Present</b></p>
 						</div>
 						<div class="col-sm-9 text-left">
 							<p style="font-size: 20px"><b>Master in Business Administration with emphasis on Project Management</b></p>
@@ -205,7 +205,7 @@
 					
 					<div class="row">
 						<div class="col-sm-3 text-right">
-							<p style="padding-top:5px"><b>2011/01 - Present</b></p>
+							<p style="padding-top:5px"><b>2006/01 - 2011-08</b></p>
 						</div>
 						<div class="col-sm-9 text-left">
 							<p style="font-size: 20px"><b>Bachelor of Science - Industrial Production Engineer</b></p>
