--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				
 				<div class="col-md-6 text-left" style="margin-top: 20px; font-size:16px">
-					<p>Experienced Industrial Engineer with over 8 years of experience in Business Systems such as Manufacturing Execution System (MES), System Applications and Products in Data Processing (SAP) and Product Lifecycle Management (PLM) in the tasks of configuration, troubleshooting and project management.</p>
+					<p>Experienced Industrial Engineer with over 11 years of work experience, with impressive background in Manufacturing and Business Systems, Inventory Management, Supply Chain Management, Data Analysis and Customer Service.</p>
 				</div>
 			
 			</div>
