--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				</div>
 				
 				<div class="col-md-6 text-left" style="margin-top: 20px; font-size:16px">
-					<p>Experienced Industrial Engineer with over 11 years of work experience, with impressive background in Manufacturing and Business Systems, Inventory Management, Supply Chain Management, Data Analysis and Customer Service.</p>
+					<p>Experienced Industrial Engineer with over 11 years of work experience, with extensive background in Manufacturing and Business Systems, Inventory Management, Supply Chain Management, Data Analysis and Customer Service.</p>
 				</div>
 			
 			</div>
