--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 					
 					<div class="row">
 						<div class="col-sm-3 text-right">
-							<p style="padding-top:5px"><b>2014/01 - Current</b></p>
+							<p style="padding-top:5px"><b>2014/01 - 2022/08</b></p>
 						</div>
 						<div class="col-sm-9 text-left">
 							<p style="font-size: 20px"><b>Business Systems Analyst</b></p>
