--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							<p style="font-size: 20px"><b>Direct Material Manufacturing Engineering Student Worker</b></p>
 							<p style="font-style: italic">INTEL - Heredia, Costa Rica</p>
 							<p>Responsible for the management of direct materials inventory, factory controls, projects and processes, such as handling, packaging, yield indicators and other manufacturing processes which were crucial to achieve company's quality standard goals.
-							<br>Lead constant improvement and efficiency opportunities related to direct materials in several factory areas and support departments, like Finance, Purchasing, Engineering and Materials.</p>
+							<br>Lead constant improvement and efficiency opportunities related to direct materials in several factory areas and support departments (such as Finance, Purchasing, Engineering and Materials).</p>
 						</div>
 					</div>
 					
