--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							<p>SAP</p>
 						</div>
 						<div class="col-sm-4 text-center">
-							<p><img class="icon" height="25" src="img/5.png"></p>
+							<p><img class="icon" height="25" src="img/4.png"></p>
 						</div>
 					</div>
 					<div class="row">
@@ -120,7 +120,7 @@
 							<p>PLM (Windchill)</p>
 						</div>
 						<div class="col-sm-4 text-center">
-							<p><img class="icon" height="25" src="img/5.png"></p>
+							<p><img class="icon" height="25" src="img/4.png"></p>
 						</div>
 					</div>
 					<div class="row">
@@ -139,6 +139,13 @@
 							<p><img class="icon" height="25" src="img/4.png"></p>
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-sm-6">
+							<p>MS Excel</p>
+						</div>
+						<div class="col-sm-4 text-center">
+							<p><img class="icon" height="25" src="img/4.png"></p>
+						</div>
 					
 					
 					<p class="t b" style="padding-bottom: 10px; padding-top:25px; border-bottom: 1px solid #C8C8C8"><b>Languages</b></p>
