--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 						<div class="col-sm-4 text-center">
 							<p><img class="icon" height="25" src="img/4.png"></p>
 						</div>
+					</div>
 					
 					
 					<p class="t b" style="padding-bottom: 10px; padding-top:25px; border-bottom: 1px solid #C8C8C8"><b>Languages</b></p>
